fix: fix swagger fetch endpoint and registerUserHandler flow
